2016-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Use uint32_t rather than unsigned long ... we are
	actually dealing with 4 byte values (from htonl), not native longs,
	and this can result in buffer overrun when we try copying a 64bit
	value into a 32bit buffer on a 64bit system.

2016-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Fix for decoding base64 with unknown characters
	after a trailing '='

2016-01-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: keep key=value pairs in structured fields
	on the same line if possible.

2016-01-29	Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSThread.m: Automatic 'late' unregistration of thread objects:
	When +exit is not called, we no longer log a warning and leak the
	thread object.
	Instead, we add it to a map table, keyed under the current thread ID,
	and use that in GSCurrentThread() to find the correct NSThread object
	if pthread_getspecific wont return it to us. 
	* Tests/base/NSThread/late_unregister.m: Test case for late
	unregistration.

2016-01-21	Niels Grewe <niels.grewe@halbordnung.de>

	* Source/Additions/GSMime.m: Fix folding of headers containing
	a '_' character.

2016-01-21	Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/base/GSMime/general.m: Test case for quoted boundary
	parameter failure.

2016-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Fix errors in conversion from a constant utf-8
	string containing non-ascii characters to latin1 encoded data.
	* Source/Additions/GSMime.m: Change line folding code to preserve
	exact whitespace (using encoded words if necessary). Add support
	for generating more readable 'q' encoded words rather than just
	base64 encoded.  Uses old behavior of folding with a tab character
	if the GSMimeOldStyleFolding user default is set to YES, though
	it's likely that this backward compatibility feature will be removed
	in future.
