@@ -1,3 +1,7 @@
+2016-02-09  Larry Campbell <lcampbel@akamai.com>
+
+	* Source/NSUserDefaults.m: Fix for bug #46956
+
 2016-02-09  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Tools/gdomap.c: Use uint32_t rather than unsigned long ... we are
